apps/kubernetes/k3s/apps/searxng/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: searxng
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`search.hughboi.vip`)
      kind: Rule
      services:
        - name: searxng
          port: 8080
  tls:
    secretName: hughboi-tls
